2012-03-16  Junji Tojo <Junji.Tojo@cern.ch>
        * Added NTUP_HSG5WHU, NTUP_HSG5WHQ, NTUP_HSG5ZHLLU, NTUP_HSG5ZHMETU in Reco_trf.py and MergeNTUP_trf.py
        * Tagging as PATJobTransforms-00-04-01

2012-03-13  Junji Tojo <Junji.Tojo@cern.ch>
        * Fix typos, add/remove NTUPs in MergeNTUP_trf.py, consistent with Reco_trf.py
        * Tagging as PATJobTransforms-00-04-00

2012-03-13 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Make fastPoolMerge the default for POOL files in Merging_trf
    * Tagging as PATJobTransforms-00-03-99

2012-03-12  Bjorn Sarrazin <bjorn.sarrazin@cern.ch>
        * adding more NTUP arguments to MergeNTUP_trf 
        * Tagging as PATJobTransforms-00-03-98

2012-03-12  Bjorn Sarrazin <bjorn.sarrazin@cern.ch>
        * adding various NTUP arguments to MergeNTUP_trf 
        * Tagging as PATJobTransforms-00-03-97

2012-03-12  Junji Tojo <Junji.Tojo@cern.ch>
        * Fix typos : missing "File" after output_NTUP_XXX in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-96

2012-03-12  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_SUSYBOOSTFile and outputNTUP_SUSY34LEPFile and in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-95

2012-03-02  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_ZPRIMEMMFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-94

2012-02-24 Joe Tuggle <jtuggle@uchicago.edu>
        * Updated default input files to mc11 and 2011 period M data
        * Tagging as PATJobTransforms-00-03-93

2012-02-14  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_SUSYLEPTAU in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-92

2012-02-13 Steven Beale <steven.beale@physik.uni-muenchen.de>
    * Updated fastPoolMerge to use the new exit codes
    * Tagging as PATJobTransforms-00-03-91.

2012-01-26 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Tagging as PATJobTransforms-00-03-90.
