@@ -1,3 +1,9 @@
+2012-03-19 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * Improve robustness of hybrid merging:
+        * Do not use shell execution
+        * Ensure that stderr and stdout share a file handle
+        * Behave correctly on negative return codes
+
 2012-03-16  Junji Tojo <Junji.Tojo@cern.ch>
         * Added NTUP_HSG5WHU, NTUP_HSG5WHQ, NTUP_HSG5ZHLLU, NTUP_HSG5ZHMETU in Reco_trf.py and MergeNTUP_trf.py
         * Tagging as PATJobTransforms-00-04-01
